# workspace

./: LICENSE  README.md  __main__.py  pyproject.toml
modules/: __init__.py  w_commands.py  w_utils.py
src/: del.bash  init.bash  new.bash  workspacesAdd.bash  workspacesDel.bash  workspacesNew.bash
