[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workspace"
version = "0.0.1a0"
description = "A CLI utility for creating and managing workspaces."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = []
authors = [
    {name = "Rayshawn Levy", email = "sneekyfoxx09@gmail.com"},
]
maintainers = [
    {name = "Rayshawn Levy", email = "sneekyfoxx09@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
workspace-cli = "workspace:__main__"

[project.urls]
Repository = "https://github.com/sneekyfoxx/workspace.git"
Issues = "https://github.com/sneekyfoxx/workspace/issues"
